--- a/Documentation/latex/imgui__extras_8h_source.tex
+++ b/Documentation/latex/imgui__extras_8h_source.tex
@@ -2,33 +2,44 @@
 \hypertarget{imgui__extras_8h_source}{}\label{imgui__extras_8h_source}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{comment}{//\ =====================================================================================================================}}
-\DoxyCodeLine{00002\ \textcolor{comment}{//\ Copyright\ 2024\ Medusa\ Slockbower}}
-\DoxyCodeLine{00003\ \textcolor{comment}{//\ Licensed\ under\ the\ Apache\ License,\ Version\ 2.0\ (the\ "{}License"{});}}
-\DoxyCodeLine{00004\ \textcolor{comment}{//\ you\ may\ not\ use\ this\ file\ except\ in\ compliance\ with\ the\ License.}}
-\DoxyCodeLine{00005\ \textcolor{comment}{//\ You\ may\ obtain\ a\ copy\ of\ the\ License\ at}}
-\DoxyCodeLine{00006\ \textcolor{comment}{//}}
-\DoxyCodeLine{00007\ \textcolor{comment}{//\ \ http://www.apache.org/licenses/LICENSE-\/2.0}}
-\DoxyCodeLine{00008\ \textcolor{comment}{//}}
-\DoxyCodeLine{00009\ \textcolor{comment}{//\ Unless\ required\ by\ applicable\ law\ or\ agreed\ to\ in\ writing,\ software}}
-\DoxyCodeLine{00010\ \textcolor{comment}{//\ distributed\ under\ the\ License\ is\ distributed\ on\ an\ "{}AS\ IS"{}\ BASIS,}}
-\DoxyCodeLine{00011\ \textcolor{comment}{//\ WITHOUT\ WARRANTIES\ OR\ CONDITIONS\ OF\ ANY\ KIND,\ either\ express\ or\ implied.}}
-\DoxyCodeLine{00012\ \textcolor{comment}{//\ See\ the\ License\ for\ the\ specific\ language\ governing\ permissions\ and}}
-\DoxyCodeLine{00013\ \textcolor{comment}{//\ limitations\ under\ the\ License.}}
-\DoxyCodeLine{00014\ \textcolor{comment}{//\ =====================================================================================================================}}
-\DoxyCodeLine{00015\ }
-\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#ifndef\ IMGUI\_EXTRAS\_H}}
-\DoxyCodeLine{00017\ \textcolor{preprocessor}{\#define\ IMGUI\_EXTRAS\_H}}
+\DoxyCodeLine{00002\ \textcolor{comment}{//\ \ imgui-\/extras,\ an\ extension\ for\ Dear\ ImGui\ that\ adds\ extra\ functionality.}}
+\DoxyCodeLine{00003\ \textcolor{comment}{//\ \ Copyright\ (C)\ 2024\ \ Medusa\ Slockbower}}
+\DoxyCodeLine{00004\ \textcolor{comment}{//}}
+\DoxyCodeLine{00005\ \textcolor{comment}{//\ \ This\ program\ is\ free\ software:\ you\ can\ redistribute\ it\ and/or\ modify}}
+\DoxyCodeLine{00006\ \textcolor{comment}{//\ \ it\ under\ the\ terms\ of\ the\ GNU\ General\ Public\ License\ as\ published\ by}}
+\DoxyCodeLine{00007\ \textcolor{comment}{//\ \ the\ Free\ Software\ Foundation,\ either\ version\ 3\ of\ the\ License,\ or}}
+\DoxyCodeLine{00008\ \textcolor{comment}{//\ \ (at\ your\ option)\ any\ later\ version.}}
+\DoxyCodeLine{00009\ \textcolor{comment}{//}}
+\DoxyCodeLine{00010\ \textcolor{comment}{//\ \ This\ program\ is\ distributed\ in\ the\ hope\ that\ it\ will\ be\ useful,}}
+\DoxyCodeLine{00011\ \textcolor{comment}{//\ \ but\ WITHOUT\ ANY\ WARRANTY;\ without\ even\ the\ implied\ warranty\ of}}
+\DoxyCodeLine{00012\ \textcolor{comment}{//\ \ MERCHANTABILITY\ or\ FITNESS\ FOR\ A\ PARTICULAR\ PURPOSE.\ \ See\ the}}
+\DoxyCodeLine{00013\ \textcolor{comment}{//\ \ GNU\ General\ Public\ License\ for\ more\ details.}}
+\DoxyCodeLine{00014\ \textcolor{comment}{//}}
+\DoxyCodeLine{00015\ \textcolor{comment}{//\ \ You\ should\ have\ received\ a\ copy\ of\ the\ GNU\ General\ Public\ License}}
+\DoxyCodeLine{00016\ \textcolor{comment}{//\ \ along\ with\ this\ program.\ \ If\ not,\ see\ <https://www.gnu.org/licenses/>.}}
+\DoxyCodeLine{00017\ \textcolor{comment}{//\ =====================================================================================================================}}
 \DoxyCodeLine{00018\ }
-\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#include\ <imgui-\/docking/imgui.h>}}
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{keyword}{namespace\ }ImGui}
-\DoxyCodeLine{00022\ \{}
-\DoxyCodeLine{00023\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}*\ v,\ \textcolor{keywordtype}{int}\ step\ =\ 1,\ \textcolor{keywordtype}{int}\ step\_fast\ =\ 100,\ ImGuiInputTextFlags\ flags\ =\ 0);}
-\DoxyCodeLine{00024\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt2(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[2],\ ImGuiInputTextFlags\ flags\ =\ 0);}
-\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt3(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[3],\ ImGuiInputTextFlags\ flags\ =\ 0);}
-\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt4(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[4],\ ImGuiInputTextFlags\ flags\ =\ 0);}
-\DoxyCodeLine{00027\ \}}
-\DoxyCodeLine{00028\ }
-\DoxyCodeLine{00029\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//IMGUI\_EXTRAS\_H}}
+\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#ifndef\ IMGUI\_EXTRAS\_H}}
+\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#define\ IMGUI\_EXTRAS\_H}}
+\DoxyCodeLine{00021\ }
+\DoxyCodeLine{00022\ \textcolor{preprocessor}{\#include\ <imgui-\/docking/imgui.h>}}
+\DoxyCodeLine{00023\ }
+\DoxyCodeLine{00024\ \textcolor{keyword}{namespace\ }ImGui}
+\DoxyCodeLine{00025\ \{}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}*\ v,\ \textcolor{keywordtype}{int}\ step\ =\ 1,\ \textcolor{keywordtype}{int}\ step\_fast\ =\ 100,\ ImGuiInputTextFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00027\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt2(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[2],\ ImGuiInputTextFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00028\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt3(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[3],\ ImGuiInputTextFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00029\ \ \ \ \ \textcolor{keywordtype}{bool}\ InputUInt4(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{unsigned}\ \textcolor{keywordtype}{int}\ v[4],\ ImGuiInputTextFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00030\ }
+\DoxyCodeLine{00031\ \ \ \ \ \textcolor{keywordtype}{bool}\ ColorPreview3(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{float}\ v[3],\ ImGuiColorEditFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keywordtype}{bool}\ ColorPreview3(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ ImVec4\ color,\ ImGuiColorEditFlags\ flags\ =\ 0)\ \{\ ColorPreview3(label,\ \&color.x,\ flags);\ \}}
+\DoxyCodeLine{00033\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keywordtype}{bool}\ ColorPreview3(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ ImColor\ color,\ ImGuiColorEditFlags\ flags\ =\ 0)\ \{\ ColorPreview3(label,\ \&color.Value.x,\ flags);\ \}}
+\DoxyCodeLine{00034\ }
+\DoxyCodeLine{00035\ \ \ \ \ \textcolor{keywordtype}{bool}\ ColorPreview4(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ \textcolor{keywordtype}{float}\ v[4],\ ImGuiColorEditFlags\ flags\ =\ 0);}
+\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keywordtype}{bool}\ ColorPreview4(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ ImVec4\ color,\ ImGuiColorEditFlags\ flags\ =\ 0)\ \{\ ColorPreview4(label,\ \&color.x,\ flags);\ \}}
+\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keyword}{inline}\ \textcolor{keywordtype}{bool}\ ColorPreview4(\textcolor{keyword}{const}\ \textcolor{keywordtype}{char}*\ label,\ ImColor\ color,\ ImGuiColorEditFlags\ flags\ =\ 0)\ \{\ ColorPreview4(label,\ \&color.Value.x,\ flags);\ \}}
+\DoxyCodeLine{00038\ \}}
+\DoxyCodeLine{00039\ }
+\DoxyCodeLine{00040\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//IMGUI\_EXTRAS\_H}}
 
 \end{DoxyCode}
